fix car box on mobile

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -8,8 +8,8 @@
 	color: rgb(233, 225, 225);
 }
 .companyBox img {
-	width: 80%;
-	height: 150px;
+	width: 90%;
+	height: 180px;
 	object-fit: cover;
 }
 .boxLink {
@@ -41,4 +41,25 @@ h2 {
 }
 p {
 	color: rgb(70, 68, 68);
+}
+
+@media only screen and (max-width: 620px) {
+	.carsBox {
+		width: 100%;
+		margin-bottom: 1rem;
+	}
+	.companyBox img {
+		width: 100%;
+		height: 150px;
+		object-fit: cover;
+	}
+	.companyBox {
+		background: rgb(189, 186, 186);
+		width: 60%;
+		margin: 0 auto;
+		padding: 0.1rem;
+		margin-top: 1rem;
+		border-radius: 10px;
+		color: rgb(233, 225, 225);
+	}
 }
